<resources>
    <string name="user">Enter First Value</string>
    <string name="pass">Enter Second Value</string>
    <string name="Bsubmit">Submit</string>
    <string name="Bcancel">Cancel</string>
    <string name="app_name">loginactivity</string>
    <string name="Button1">ADD</string>
    <string name="Button2">SUB</string>
    <string name="Button3">MUL</string>
    <string name="Button4">DIV</string>

</resources>
